# modbus_world

./: .gitignore  CMakeLists.txt  Readme
example/: use_data_map.cpp
src/data/map/: CMakeLists.txt  Map.cpp  Map.h
src/data/range/: RangeManager.cpp  RangeManager.h
src/data/reg/: RegManager.cpp  RegManager.h
src/modbus/linguist/: ModbusLinguist.h
